--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean": "rm -rf dist",
     "lint": "eslint -c .eslintrc.yml --ext .js app/",
     "lint:fix": "eslint --fix -c .eslintrc.yml --ext .js app/",
-    "package": "npm run build && ./bin/package.sh",
+    "package": "npm run build && serverless deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@slack/bolt": "^3.12.2",
+    "aws-sdk": "^2.1338.0",
     "axios": "^1.3.4",
     "openai": "^3.2.1"
   }
