feat(lambdas): create now two lambda functions instead of one. Slack sends the same message multiple times if a 200 is not responded within 3 seconds. To fix this we need to tackle cold start by adding provisioned concurrency. But this is not enough as talking to OpenAI also takes time. So we now create two lambdas: one that acknowledge the message from Slack really quickly and calls asynchronously a second function which talks to OpenAI.

--- a/serverless.yml
+++ b/serverless.yml
@@ -6,10 +6,10 @@ provider:
   stage: ${opt:stage, 'dev'}
   region: us-east-1
   environment:
+    BOT_FUNCTION_NAME: ${self:service}-${self:provider.stage}-botFunction
+    DYNAMODB_TABLE: ${self:service}-${opt:stage, self:provider.stage}
     SLACK_BOT_TOKEN: ${env:SLACK_BOT_TOKEN}
     SLACK_SIGNING_SECRET: ${env:SLACK_SIGNING_SECRET}
-    OPENAI_API_KEY: ${env:OPENAI_API_KEY}
-    DYNAMODB_TABLE: ${self:service}-${opt:stage, self:provider.stage}
   iam:
     role:
       statements:
@@ -22,13 +22,22 @@ provider:
             - dynamodb:UpdateItem
             - dynamodb:DeleteItem
           Resource: "arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.DYNAMODB_TABLE}"
+        - Effect: Allow
+          Action:
+            - lambda:InvokeFunction
+            - lambda:InvokeAsync
+          Resource: "arn:aws:lambda:${opt:region, self:provider.region}:*:function:${self:provider.environment.BOT_FUNCTION_NAME}"
 
 functions:
-  app:
-    handler: dist/tmp/index.handler
+  acknowledgerFunction:
+    handler: dist/acknowledger.handler
+    provisionedConcurrency: 2
     events:
       - httpApi: 'POST /slack/events'
-
+  botFunction:
+    handler: dist/bot.handler
+    environment:
+      OPENAI_API_KEY: ${env:OPENAI_API_KEY}
 resources:
   Resources:
     conversationsTable:
