chore(gpt): increase timeout from 6 seconds to 3 minutes giving time to get proper results. This is especially needed when using gpt-4 model.

--- a/serverless.yml
+++ b/serverless.yml
@@ -38,6 +38,7 @@ functions:
     handler: dist/bot.handler
     environment:
       OPENAI_API_KEY: ${env:OPENAI_API_KEY}
+    timeout: 180
 resources:
   Resources:
     conversationsTable:
