--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean": "rm -rf dist",
     "lint": "eslint -c .eslintrc.yml --ext .js app/",
     "lint:fix": "eslint --fix -c .eslintrc.yml --ext .js app/",
-    "package": "npm run build && serverless deploy",
+    "deploy": "npm run build && serverless deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
