--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "deploy": "npm run build && serverless deploy"
   },
   "keywords": [
-    "Chat",
-    "GPT",
+    "ChatGPT",
     "Slack",
     "Bot"
   ],
